alters to main and fxml to support css files

--- a/src/main/resources/com/example/cab302/hello-view.fxml
+++ b/src/main/resources/com/example/cab302/hello-view.fxml
@@ -3,8 +3,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
+<?import java.net.URL?>
+
+<?import java.lang.String?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.cab302.controller.HelloController">
     <padding>
@@ -13,4 +15,5 @@
 
     <Label fx:id="welcomeText"/>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <?scenebuilder-stylesheet ../stylesheet_light.css?>
 </VBox>
