--- a/src/main/resources/com/example/cab302/hello-view.fxml
+++ b/src/main/resources/com/example/cab302/hello-view.fxml
@@ -4,8 +4,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 <?import com.example.cab302.MoodEApplication?>
-
 <?import javafx.scene.control.Button?>
+<?import java.net.URL?>
+<?import java.lang.String?>
+
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.cab302.controller.HelloController">
     <padding>
@@ -15,5 +17,5 @@
     <Label fx:id="welcomeText"/>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
     <Button text="Switch to Mood Input" onAction="#switchToMoodInput"/>
-
+    <?scenebuilder-stylesheet ../stylesheet_light.css?>
 </VBox>
