alters to main and fxml to support css files - added fonts not implemented

--- a/src/main/resources/com/example/cab302/hello-view.fxml
+++ b/src/main/resources/com/example/cab302/hello-view.fxml
@@ -17,5 +17,6 @@
     <Label fx:id="welcomeText"/>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
     <Button text="Switch to Mood Input" onAction="#switchToMoodInput"/>
+    <Button text="ENTER" onAction="#onHelloButtonClick"/>
     <?scenebuilder-stylesheet ../stylesheet_light.css?>
 </VBox>
