alters to main and fxml to support css files - added fonts not implemented

--- a/src/main/resources/com/example/cab302/hello-view.fxml
+++ b/src/main/resources/com/example/cab302/hello-view.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
-<?import java.net.URL?>
 
 <?import java.lang.String?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
@@ -14,6 +13,6 @@
     </padding>
 
     <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Button text="ENTER" onAction="#onHelloButtonClick"/>
     <?scenebuilder-stylesheet ../stylesheet_light.css?>
 </VBox>
