--- a/src/main/resources/com/example/cab302/hello-view.fxml
+++ b/src/main/resources/com/example/cab302/hello-view.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-<?import com.example.cab302.HelloApplication?>
+<?import com.example.cab302.MoodEApplication?>
 
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
