--- a/src/main/resources/com/example/cab302/createAccount-view.fxml
+++ b/src/main/resources/com/example/cab302/createAccount-view.fxml
@@ -1,61 +1,145 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="com.example.cab302.controller.CreateAccountController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-    <Label text="Create Account" />
-    <HBox spacing="20.0" VBox.vgrow="ALWAYS">
-        <VBox fx:id="loginContainer" prefWidth="1200" spacing="10.0">
-            <Label fx:id="welcomeText" />
-            <GridPane hgap="5.0" vgap="5.0">
-                <columnConstraints>
-                    <ColumnConstraints minWidth="70.0" />
-                    <ColumnConstraints hgrow="ALWAYS" />
-               <ColumnConstraints />
-                </columnConstraints>
-                <Label text="Username:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <Label text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <Label text="First Name:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                <Label text="Last Name:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                <Label text="Gender:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                <Label text="Date of Birth:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-                <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-                <Label text="Confirm Password:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
-                <TextField fx:id="usernameTextField" maxWidth="Infinity" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                <TextField fx:id="emailTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <TextField fx:id="firstNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                <ComboBox fx:id="genderComboBoxField" prefWidth="123.0" promptText="Choose..." GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-                <DatePicker fx:id="dobDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                <PasswordField fx:id="passwordPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                <TextField fx:id="passwordTextField" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                <PasswordField fx:id="confirmPasswordPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                <TextField fx:id="confirmPasswordTextField" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                <ComboBox fx:id="securityQuestionComboBoxField" prefWidth="400" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                <TextField fx:id="securityQuestionAnswerTextField" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-                <CheckBox fx:id="showPasswordCheckBox" onAction="#onShowPassword" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-            <rowConstraints>
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-            </rowConstraints>
-            </GridPane>
-            <HBox alignment="CENTER" spacing="10.0">
-                <HBox alignment="CENTER" spacing="10.0">
-                    <Button onAction="#onBack" text="Back" />
-                    <Button onAction="#onCreateAccount" text="Create Account" />
-                </HBox>
-            </HBox>
-        </VBox>
-    </HBox>
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cab302.controller.CreateAccountController">
+   <children>
+      <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0">
+         <children>
+            <MenuBar VBox.vgrow="NEVER">
+               <menus>
+                  <Menu mnemonicParsing="false" text="File">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="New" />
+                        <MenuItem mnemonicParsing="false" text="Open…" />
+                        <Menu mnemonicParsing="false" text="Open Recent" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Close" />
+                        <MenuItem mnemonicParsing="false" text="Save" />
+                        <MenuItem mnemonicParsing="false" text="Save As…" />
+                        <MenuItem mnemonicParsing="false" text="Revert" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Preferences…" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Quit" />
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="Edit">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Undo" />
+                        <MenuItem mnemonicParsing="false" text="Redo" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Cut" />
+                        <MenuItem mnemonicParsing="false" text="Copy" />
+                        <MenuItem mnemonicParsing="false" text="Paste" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Select All" />
+                        <MenuItem mnemonicParsing="false" text="Unselect All" />
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="Help">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
+                     </items>
+                  </Menu>
+               </menus>
+            </MenuBar>
+            <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="780.0" stroke="TRANSPARENT" strokeType="INSIDE" width="1280.0">
+                     <fill>
+                        <LinearGradient endX="1.0" endY="1.0" startX="1.0" startY="0.21904761904761902">
+                           <stops>
+                              <Stop color="#2a6274" />
+                              <Stop color="WHITE" offset="1.0" />
+                           </stops>
+                        </LinearGradient>
+                     </fill>
+                  </Rectangle>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff78" height="569.0" layoutX="161.0" layoutY="179.0" stroke="TRANSPARENT" strokeType="INSIDE" width="1002.0" />
+                  <ImageView fitHeight="210.0" fitWidth="365.0">
+                     <image>
+                        <Image url="@images/Mood.e_LightMode.png" />
+                     </image>
+                  </ImageView>
+                  <Text fill="WHITE" layoutX="581.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create Account" wrappingWidth="324.0">
+                     <font>
+                        <Font name="System Bold" size="36.0" />
+                     </font>
+                  </Text>
+                   <HBox layoutX="184.0" layoutY="193.0" prefHeight="358.0" prefWidth="1030.0" spacing="20.0">
+                      <children>
+                          <VBox fx:id="loginContainer" prefHeight="358.0" prefWidth="939.0" spacing="10.0">
+                             <children>
+                                 <Label fx:id="welcomeText" />
+                                 <GridPane hgap="5.0" prefHeight="346.0" prefWidth="939.0" vgap="5.0">
+                                     <columnConstraints>
+                                         <ColumnConstraints maxWidth="138.0" minWidth="70.0" prefWidth="125.0" />
+                                         <ColumnConstraints hgrow="ALWAYS" maxWidth="804.0" minWidth="770.0" prefWidth="783.0" />
+                                    <ColumnConstraints />
+                                     </columnConstraints>
+                                    <children>
+                                        <Label text="Username" textFill="#143c49" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                                        <Label text="Email" textFill="#143c49" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                                        <Label text="First Name" textFill="#143c49" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                                        <Label text="Last Name" textFill="#143c49" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                                        <Label text="Gender" textFill="#143c49" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                                        <Label text="Date of Birth" textFill="#143c49" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                                        <Label text="Password" textFill="#143c49" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                                        <Label text="Confirm Password" textFill="#143c49" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+                                        <TextField fx:id="usernameTextField" maxWidth="Infinity" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                                        <TextField fx:id="emailTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                        <TextField fx:id="firstNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                        <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                        <ComboBox fx:id="genderComboBoxField" prefWidth="123.0" promptText="Choose..." GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                        <DatePicker fx:id="dobDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                        <PasswordField fx:id="passwordPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                        <TextField fx:id="passwordTextField" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                        <PasswordField fx:id="confirmPasswordPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                        <TextField fx:id="confirmPasswordTextField" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                        <ComboBox fx:id="securityQuestionComboBoxField" prefWidth="400" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                                        <TextField fx:id="securityQuestionAnswerTextField" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                                        <CheckBox fx:id="showPasswordCheckBox" onAction="#onShowPassword" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                                    <Label text="Security Question" textFill="#143c49" GridPane.rowIndex="8" />
+                                    </children>
+                                 <rowConstraints>
+                                    <RowConstraints />
+                                    <RowConstraints />
+                                    <RowConstraints />
+                                    <RowConstraints />
+                                    <RowConstraints />
+                                    <RowConstraints />
+                                    <RowConstraints />
+                                    <RowConstraints />
+                                    <RowConstraints />
+                                    <RowConstraints maxHeight="35.0" minHeight="0.0" prefHeight="28.0" />
+                                    <RowConstraints maxHeight="35.0" minHeight="0.0" prefHeight="28.0" />
+                                    <RowConstraints maxHeight="35.0" minHeight="0.0" prefHeight="0.0" />
+                                    <RowConstraints maxHeight="35.0" minHeight="0.0" prefHeight="0.0" />
+                                 </rowConstraints>
+                                 </GridPane>
+                             </children>
+                          </VBox>
+                      </children>
+                   </HBox>
+                       <Button layoutX="191.0" layoutY="700.0" onAction="#onBack" text="Back" />
+                       <Button layoutX="619.0" layoutY="638.0" onAction="#onCreateAccount" style="-fx-background-color: #143C49;" text="CREATE" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <CheckBox layoutX="251.0" layoutY="583.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="823.0" text="By checking this box I am stating that I have read, understand and agree to terms of use outlined in the Mood.E Terms &amp; Conditions and Privacy Policy. " textFill="#143c49" />
+               </children>
+            </AnchorPane>
+         </children>
+      </VBox>
+   </children>
 </VBox>
