add Landing controller to landing-view.fxml

--- a/src/main/resources/com/example/cab302/landing-view.fxml
+++ b/src/main/resources/com/example/cab302/landing-view.fxml
@@ -15,7 +15,7 @@
 <?import java.lang.String?>
 <?scenebuilder-stylesheet ../stylesheet_light.css?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cab302.controller.LandingController">
    <children>
       <MenuBar VBox.vgrow="NEVER">
          <menus>
